chore(api): removed deprecated api
