# libs/clients/k33-backend-client/src/main/openapi/k33-backend-test-api.yaml
@@ -137,7 +137,7 @@ paths:
         - firebase: [ ]
 
 
-  "/contentfulEvents":
+  "/contentful-events":
     post:
       description: Webhook callbacks on Contentful events
       consumes:
@@ -174,23 +174,6 @@ paths:
           description: "Success"
 
 
-  "/email-subscriptions":
-    put:
-      description: Upsert email subscriptions
-      operationId: "addEmailSubscriptions"
-      consumes:
-        - application/json
-      parameters:
-        - name: "request"
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/EmailSubscriptionsRequest"
-      responses:
-        200:
-          description: "Success"
-
-
   "/payment/subscribed-products":
     get:
       description: Get list of subscribed products in Stripe.
@@ -208,14 +191,14 @@ paths:
           description: "Internal Error"
       security:
         - firebase: [ ]
-  "/payment/subscribed-products/{product_id}":
+  "/payment/subscribed-products/{product-id}":
     get:
       description: Get customer's subscribed product in Stripe.
       operationId: getSubscribedPaymentProduct
       produces:
         - application/json
       parameters:
-        - name: product_id
+        - name: "product-id"
           in: path
           required: true
           type: string
@@ -228,27 +211,6 @@ paths:
           description: "Not found"
         500:
           description: "Internal Error"
-      security:
-        - firebase: [ ]
-  "/payment/checkout-session":
-    post:
-      description: Create/fetch checkout session
-      operationId: createOrFetchCheckoutSessionDeprecated
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - name: "request"
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/CheckoutSessionRequest"
-      responses:
-        200:
-          description: Checkout session url and expiry date
-          schema:
-            $ref: "#/definitions/CheckoutSessionResponse"
       security:
         - firebase: [ ]
   "/payment/checkout-sessions":
@@ -270,27 +232,6 @@ paths:
           description: Checkout session url and expiry date
           schema:
             $ref: "#/definitions/CheckoutSessionResponse"
-      security:
-        - firebase: [ ]
-  "/payment/customer-portal-session":
-    post:
-      description: Create customer portal session
-      operationId: createCustomerPortalSessionDeprecated
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - name: "request"
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/CustomerPortalSessionRequest"
-      responses:
-        200:
-          description: Customer Portal Session
-          schema:
-            $ref: "#/definitions/CustomerPortalSessionResponse"
       security:
         - firebase: [ ]
   "/payment/customer-portal-sessions":
